[package]
name = "bohongan"
version = "0.1.0"
edition = "2021"
description = "A zero-config JSON server for mocking REST APIs"
authors = ["Bohongan Team"]
license = "MIT"

[dependencies]
actix-web = "4.4.0"
tokio = { version = "1.28.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.3.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10.0"
thiserror = "1.0"
futures = "0.3"
uuid = { version = "1.3.0", features = ["v4", "serde"] }
regex = "1.8.1"
protobuf = "3.2.0"
protobuf-parse = "3.2.0"
tempfile = "3.3.0"